<resources>
    <string name="app_name">Bug Tracking App</string>
    <string name="action_bugReport">Bug Reports</string>
    <string name="action_bugTrackingForm">Bug Tracking Form</string>
    <string name="importanceNumber">4</string>

    <string name="menu_bugForm">Bug Form</string>
    <string name="menu_bugReport">Bug Reports</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_about">About Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="select_profile_image">Select Profile Image</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Brendon O Neill</string>
    <string name="nav_header_subtitle">BONMobileApp@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_report_all">All Bug Reports</string>
    <string name="favourite">Favourite Bugs</string>
    <string name="favouriteList">Favourite Bug List</string>

    <string name="aboutus_message">Hi, I\'m Brendon O\'Neill\n\nThis is my Bug Tracking App\n\n Hope you like it</string>


    <string name="action_edit">Edit Bug Record</string>
    <string name="action_update">Update</string>
    <string name="message_edit">Please Update your Details Below</string>


    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Welcome to my Bug Tracking App Please Login Below</string>
    <string name="appname">Bug Tracking App</string>


    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
