<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bugform"
            android:icon="@drawable/bug_tracking"
            android:title="@string/menu_bugForm" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/bug_report"
            android:title="@string/menu_bugReport" />

        <item
            android:id="@+id/nav_report_all"
            android:icon="@drawable/all_bugs"
            android:title="@string/menu_report_all" />

        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/fav"
            android:title="@string/favourite" />
       
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_menu_aboutus"
            android:title="@string/menu_about" />
    </group>



    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
